fixed the width on mobile
there was a lot of extra width that made the website look weird on mobile.

--- a/styles.css
+++ b/styles.css
@@ -274,8 +274,8 @@ RESPONSIVENESS
     }
 
     .city__description {
-      font-size: 24px;
-      width: 400px;
+      font-size: 20px;
+      width: 300px;
     }
 
     .activities__title {
@@ -283,7 +283,7 @@ RESPONSIVENESS
     }
 
     .activities__sections {
-      max-width: 760px;
+      max-width: 300px;
       display: flex;
       flex-direction: column;
     }
@@ -305,6 +305,7 @@ RESPONSIVENESS
     }
 
     .guide__card {
+      width: 300px;
       display: flex;
       flex-direction: column;
       align-items: center;
